UI[Header/Fix]: Fix `search .input`
Fix `search .input` hidden under button `clear`

--- a/src/Layouts/components/Search/Search.module.scss
+++ b/src/Layouts/components/Search/Search.module.scss
@@ -14,6 +14,7 @@
   border-radius: 92px;
 
   input {
+    padding-right: 46px;
     font-family: var(--font-family);
     flex: 1;
     height: 100%;
